--- a/index.html
+++ b/index.html
@@ -1,33 +1,36 @@
 <!DOCTYPE html>
 <html>
+
   <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta charset='utf-8' />
+    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
+    <meta name="description" content="Journeythroughavslor : A fun interactive text based RPG" />
 
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Journeythroughavslor by carharttjimmy</title>
+    <title>Journeythroughavslor</title>
   </head>
 
   <body>
 
-    <header>
-      <div class="container">
-        <h1>Journeythroughavslor</h1>
-        <h2>A fun interactive text based RPG</h2>
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/carharttjimmy/JourneyThroughAvslor">View on GitHub</a>
 
-        <section id="downloads">
-          <a href="https://github.com/carharttjimmy/JourneyThroughAvslor/zipball/master" class="btn">Download as .zip</a>
-          <a href="https://github.com/carharttjimmy/JourneyThroughAvslor/tarball/master" class="btn">Download as .tar.gz</a>
-          <a href="https://github.com/carharttjimmy/JourneyThroughAvslor" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
-        </section>
-      </div>
-    </header>
+          <h1 id="project_title">Journeythroughavslor</h1>
+          <h2 id="project_tagline">A fun interactive text based RPG</h2>
 
-    <div class="container">
-      <section id="main_content">
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/carharttjimmy/JourneyThroughAvslor/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/carharttjimmy/JourneyThroughAvslor/tarball/master">Download this project as a tar.gz file</a>
+            </section>
+        </header>
+    </div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
         <h1>
 <a name="journey-through-avslor" class="anchor" href="#journey-through-avslor"><span class="octicon octicon-link"></span></a>Journey Through Avslor</h1>
 
@@ -77,6 +80,15 @@ So, hopefully soon, you will be able to dive into our realm of story, adventure,
       </section>
     </div>
 
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">Journeythroughavslor maintained by <a href="https://github.com/carharttjimmy">carharttjimmy</a></p>
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      </footer>
+    </div>
+
     
+
   </body>
 </html>
