Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Journeythroughavslor : A fun interactive text based RPG" />
+    <meta name="description" content="Journey Through Avslor : A fun interactive text based RPG" />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Journeythroughavslor</title>
+    <title>Journey Through Avslor</title>
   </head>
 
   <body>
@@ -16,14 +16,14 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/carharttjimmy/JourneyThroughAvslor">View on GitHub</a>
+          <a id="forkme_banner" href="https://github.com/Avslor/JourneyThroughAvslor">View on GitHub</a>
 
-          <h1 id="project_title">Journeythroughavslor</h1>
+          <h1 id="project_title">Journey Through Avslor</h1>
           <h2 id="project_tagline">A fun interactive text based RPG</h2>
 
             <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/carharttjimmy/JourneyThroughAvslor/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/carharttjimmy/JourneyThroughAvslor/tarball/master">Download this project as a tar.gz file</a>
+              <a class="zip_download_link" href="https://github.com/Avslor/JourneyThroughAvslor/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/Avslor/JourneyThroughAvslor/tarball/master">Download this project as a tar.gz file</a>
             </section>
         </header>
     </div>
@@ -63,6 +63,7 @@ So, hopefully soon, you will be able to dive into our realm of story, adventure,
 <li>Lore Master - charged with weaving the story, lore, and history of the in game realm. The Lore Master leads the Lore section of the game.</li>
 <li>Core Developers - charged with coding and developing the game including the writing of lore.</li>
 <li>Architect - charged with helping us figure out the right models and design patterns to use.</li>
+<li>Project Manager - charged with directing everyone towards goals and milestones.</li>
 </ul><h2>
 <a name="how-to-get-involved" class="anchor" href="#how-to-get-involved"><span class="octicon octicon-link"></span></a>How to get involved</h2>
 
@@ -76,14 +77,14 @@ So, hopefully soon, you will be able to dive into our realm of story, adventure,
 <h2>
 <a name="license" class="anchor" href="#license"><span class="octicon octicon-link"></span></a>License</h2>
 
-<p>We are licensed under <a href="../master/LICENSE">Apache v2.0</a>.</p>
+<p>This software is licensed under <a href="https://github.com/carharttjimmy/JourneyThroughAvslor/blob/master/LICENSE">Apache v2.0</a>.</p>
       </section>
     </div>
 
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Journeythroughavslor maintained by <a href="https://github.com/carharttjimmy">carharttjimmy</a></p>
+        <p class="copyright">Journey Through Avslor maintained by <a href="https://github.com/Avslor">Avslor</a></p>
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
