Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
 <p>We are an open source project. And, we are a fun interactive text based RPG!
 So, hopefully soon, you will be able to dive into our realm of story, adventure, betrayal, and intrigue.</p>
 
+<h3>
+<a name="playstyle" class="anchor" href="#playstyle"><span class="octicon octicon-link"></span></a>Playstyle</h3>
+
+<p>The Avslor team is looking to have the game blend elements of interactive ficiton and the turn based combat of a Journal RPG.</p>
+
 <h2>
 <a name="meet-the-team" class="anchor" href="#meet-the-team"><span class="octicon octicon-link"></span></a>Meet the team</h2>
 
