Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -49,12 +49,7 @@ So, hopefully soon, you will be able to dive into our realm of story, adventure,
 <a name="meet-the-team" class="anchor" href="#meet-the-team"><span class="octicon octicon-link"></span></a>Meet the team</h2>
 
 <ul>
-<li>James Loyd - Lead Developer and Project Manager
-
-<ul>
-<li><a href="mailto:jamestloyd@gmail.com">jamestloyd@gmail.com</a></li>
-</ul>
-</li>
+<li>James Loyd - Lead Developer and Project Manager</li>
 <li>Sam Billings - Lore Master</li>
 <li>Brian - Lore Master</li>
 <li>Foxiepaws - Architect  and Core Developer</li>
