--- a/index.html
+++ b/index.html
@@ -1,58 +1,55 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
   <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Journey Through Avslor : A fun interactive text based RPG" />
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>Journey Through Avslor by Avslor</title>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Journey Through Avslor</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
-
   <body>
+    <div class="wrapper">
+      <header>
+        <h1>Journey Through Avslor</h1>
+        <p>A fun interactive text based RPG</p>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/Avslor/JourneyThroughAvslor">View on GitHub</a>
+        <p class="view"><a href="https://github.com/Avslor/JourneyThroughAvslor">View the Project on GitHub <small>Avslor/JourneyThroughAvslor</small></a></p>
 
-          <h1 id="project_title">Journey Through Avslor</h1>
-          <h2 id="project_tagline">A fun interactive text based RPG</h2>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/Avslor/JourneyThroughAvslor/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/Avslor/JourneyThroughAvslor/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
+        <ul>
+          <li><a href="https://github.com/Avslor/JourneyThroughAvslor/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/Avslor/JourneyThroughAvslor/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/Avslor/JourneyThroughAvslor">View On <strong>GitHub</strong></a></li>
+        </ul>
+      </header>
+      <section>
         <h1>
 <a name="journey-through-avslor" class="anchor" href="#journey-through-avslor"><span class="octicon octicon-link"></span></a>Journey Through Avslor</h1>
 
 <h2>
 <a name="about" class="anchor" href="#about"><span class="octicon octicon-link"></span></a>About</h2>
 
-<p>We are an open source project. And, we are a fun interactive text based RPG!
-So, hopefully soon, you will be able to dive into our realm of story, adventure, betrayal, and intrigue.</p>
+<p>We are an open source project. And, this project is a fun interactive text based RPG!
+So, hopefully soon, you will be able to dive into a realm of story, adventure, betrayal, and intrigue.</p>
 
 <h3>
 <a name="playstyle" class="anchor" href="#playstyle"><span class="octicon octicon-link"></span></a>Playstyle</h3>
 
-<p>The Avslor team is looking to have the game blend elements of interactive ficiton and the turn based combat of a Journal RPG.</p>
+<p>The Avslor team is looking to have the game blend elements of <a href="http://en.wikipedia.org/wiki/Interactive_fiction">interactive ficiton</a> and the turn based combat of a <a href="http://en.wikipedia.org/wiki/Japanese_role-playing_game">JRPG</a>.</p>
 
 <h2>
 <a name="meet-the-team" class="anchor" href="#meet-the-team"><span class="octicon octicon-link"></span></a>Meet the team</h2>
 
 <ul>
-<li>James Loyd - Lead Developer and Project Manager</li>
+<li>James Loyd (carharrtjimmy) - Lead Developer and Project Manager</li>
 <li>Sam Billings - Lore Master</li>
 <li>Brian - Lore Master</li>
-<li>Foxiepaws - Architect  and Core Developer</li>
+<li>Joshua Theze (foxiepaws) - Architect and Core Developer</li>
 <li>Terra-And-Luna - Core Developer</li>
 </ul><h3>
 <a name="roles" class="anchor" href="#roles"><span class="octicon octicon-link"></span></a>Roles</h3>
@@ -72,24 +69,24 @@ So, hopefully soon, you will be able to dive into our realm of story, adventure,
 <h2>
 <a name="irc-channel" class="anchor" href="#irc-channel"><span class="octicon octicon-link"></span></a>IRC Channel</h2>
 
-<p>We are located at  #JourneryThroughAvslor on <a href="http://freenode.net/">FreeNode</a></p>
+<p>We are located at  #JourneryThroughAvslor on <a href="http://freenode.net/">FreeNode</a>. Come by sometime!</p>
 
 <h2>
 <a name="license" class="anchor" href="#license"><span class="octicon octicon-link"></span></a>License</h2>
 
-<p>This software is licensed under <a href="https://github.com/carharttjimmy/JourneyThroughAvslor/blob/master/LICENSE">Apache v2.0</a>.</p>
-      </section>
-    </div>
+<p>This software is licensed under <a href="https://github.com/Avslor/JourneyThroughAvslor/blob/master/LICENSE">Apache v2.0</a>.</p>
 
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Journey Through Avslor maintained by <a href="https://github.com/Avslor">Avslor</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+<h2>
+<a name="travis-a-continuous-integration-build-service" class="anchor" href="#travis-a-continuous-integration-build-service"><span class="octicon octicon-link"></span></a><a href="https://travis-ci.org/">Travis</a> (A Continuous Integration Build Service)</h2>
+
+<p><a href="https://travis-ci.org/Avslor/JourneyThroughAvslor"><img src="https://travis-ci.org/Avslor/JourneyThroughAvslor.png?branch=master" alt="Build Status"></a></p>
+      </section>
+      <footer>
+        <p>This project is maintained by <a href="https://github.com/Avslor">Avslor</a></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
-
+    <script src="javascripts/scale.fix.js"></script>
     
-
   </body>
 </html>
